--- a/Text_Classification_task_Hanna_4_MS_3.ipynb
+++ b/Text_Classification_task_Hanna_4_MS_3.ipynb
@@ -165,7 +165,7 @@
         "import tensorflow\n",
         "print(tensorflow.__version__)"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -213,7 +213,7 @@
         "\n",
         "%matplotlib inline\n"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -249,7 +249,7 @@
       "source": [
         "!pip install h5py"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -305,7 +305,7 @@
         "# Download train data\n",
         "!wget http://dl.turkunlp.org/TKO_8965-projects/classification/fincore-train.tsv"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -414,7 +414,7 @@
         "test_text = test['text']\n",
         "test_labels = test['label']"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -493,7 +493,7 @@
         "\n",
         "#pprint(sorted(nums.items(), key = lambda kv:(kv[1], kv[0])))"
       ],
-      "execution_count": 49,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3699,7 +3699,7 @@
         "  print(d.shape)\n",
         "  #print(d.head())"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -3738,7 +3738,7 @@
         "  print(d.shape)\n",
         "  #print(d.head())"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -3833,7 +3833,7 @@
       "source": [
         "!wget -nc http://dl.turkunlp.org/finbert/bert-base-finnish-cased-v1.zip"
       ],
-      "execution_count": 24,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -3869,7 +3869,7 @@
         "# Give -n argument so that existing files aren't overwritten \n",
         "!unzip -n bert-base-finnish-cased-v1.zip"
       ],
-      "execution_count": 25,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -3955,7 +3955,7 @@
         "print(vocab[0::500]) # 0 is for padding!\n",
         "print(vocab[103]) # tags are included"
       ],
-      "execution_count": 28,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -4000,7 +4000,7 @@
         "# Print configuration contents\n",
         "pprint(config)"
       ],
-      "execution_count": 29,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -4085,7 +4085,7 @@
         "    print('Decoded:', ' '.join(tokenizer.decode(indices)))\n",
         "    print()"
       ],
-      "execution_count": 31,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -4182,7 +4182,7 @@
         "# print(len(test_label))\n",
         "# print(len(test_['text']))"
       ],
-      "execution_count": 32,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -4287,7 +4287,7 @@
         "print('Segment ids:')\n",
         "print(test_inp[1][:2])"
       ],
-      "execution_count": 35,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -4425,7 +4425,7 @@
         "# token and segment inputs, just as we made\n",
         "pretrained_model.inputs"
       ],
-      "execution_count": 37,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4456,7 +4456,7 @@
       "source": [
         "pretrained_model.outputs"
       ],
-      "execution_count": 38,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4533,7 +4533,7 @@
         "\n",
         "print(bert_out)"
       ],
-      "execution_count": 40,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -4598,7 +4598,7 @@
       "source": [
         "model.output"
       ],
-      "execution_count": 42,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5054,7 +5054,7 @@
         "df['regs'] = all_regs\n",
         "df.head()"
       ],
-      "execution_count": 51,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -5177,7 +5177,7 @@
         "\n",
         "dummies"
       ],
-      "execution_count": 52,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5786,7 +5786,7 @@
         "\n",
         "df.head()"
       ],
-      "execution_count": 53,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6141,7 +6141,7 @@
         "subregs = np.setdiff1d(mlb.classes_, hiregs)\n",
         "subregs"
       ],
-      "execution_count": 54,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6185,7 +6185,7 @@
         "print(test.shape)\n",
         "print(dev.shape)\n"
       ],
-      "execution_count": 55,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -6227,7 +6227,7 @@
         "\n",
         "true_regs"
       ],
-      "execution_count": 56,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6415,7 +6415,7 @@
         "for d in frames:\n",
         "  print(d.shape)"
       ],
-      "execution_count": 58,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -6474,7 +6474,7 @@
         "print(x[0].shape)\n",
         "print(test_inp[0].shape)"
       ],
-      "execution_count": 60,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -6492,11 +6492,11 @@
       "metadata": {
         "id": "aK9SmUCcoPt1",
         "colab_type": "code",
+        "outputId": "a3d62457-fd75-4b74-ab2a-18f82e5b1521",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "a3d62457-fd75-4b74-ab2a-18f82e5b1521"
+        }
       },
       "source": [
         "# Print some examples (looks the same as in milestone 2)\n",
@@ -6508,7 +6508,7 @@
         "print('Segment ids:')\n",
         "print(X[1][:2])"
       ],
-      "execution_count": 61,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -6725,7 +6725,7 @@
       "source": [
         "pretrained_model.inputs"
       ],
-      "execution_count": 95,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6756,7 +6756,7 @@
       "source": [
         "pretrained_model.output"
       ],
-      "execution_count": 96,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6803,7 +6803,7 @@
         "\n",
         "print(bert_out)"
       ],
-      "execution_count": 97,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -6857,7 +6857,7 @@
       "source": [
         "model.output"
       ],
-      "execution_count": 99,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6881,10 +6881,12 @@
         "colab": {}
       },
       "source": [
+        "\n",
+        "\n",
         "model.compile(\n",
         "    optimizer=optimizer,\n",
-        "    loss='binary_crossentropy', # one hot encoded labels! Is binary_crossentropy better? Or hamming_loss? Is there something specific to gain the classification threshold also?\n",
-        "    metrics=['categorical_accuracy']\n",
+        "    loss='binary_crossentropy', # one hot encoded labels! Is hamming_loss better?\n",
+        "    metrics=['categorical_accuracy', 'weighted_binary_crossentropy', 'binary_accuracy'] #metrics=['binary_accuracy', 'categorical_accuracy'] \n",
         ")\n",
         "\n",
         "# loss functions tried: categorical_crossentropy < binary_crossentropy \n",
@@ -6934,7 +6936,7 @@
         "    callbacks=[stop_cb, mc_cb]\n",
         ")"
       ],
-      "execution_count": 101,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -7027,7 +7029,7 @@
         "\n",
         "plot_history(history)"
       ],
-      "execution_count": 102,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7052,7 +7054,24 @@
         "colab": {}
       },
       "source": [
-        "predictions = model.predict(test_inp) # np.argmax gives the index which has the highest value e.g. class"
+        "predictions = model.predict(test_inp, batch_size = BATCH_SIZE) # default batch size for predictiong is 32. See Keras documentation"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "H4q6hvoMzkRm",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# https://datascience.stackexchange.com/questions/25752/how-does-keras-calculate-accuracy-for-multi-label-classification\n",
+        "# \n",
+        "\n",
+        "score, acc = model.evaluate(test_set, test_labels,\n",
+        "                            batch_size=batch_size)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -7071,7 +7090,7 @@
       "source": [
         "print(predictions)"
       ],
-      "execution_count": 104,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -7093,16 +7112,16 @@
       "metadata": {
         "id": "2X7dkit5l-ar",
         "colab_type": "code",
+        "outputId": "9b5706a2-3b45-498e-b2b5-40996f6d4d1a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        },
-        "outputId": "9b5706a2-3b45-498e-b2b5-40996f6d4d1a"
+        }
       },
       "source": [
         "print(sum(predictions[0])) # since we do multiclass, sum of probabilities is over 1"
       ],
-      "execution_count": 105,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -7135,7 +7154,7 @@
         "predicted_labels = mlb.inverse_transform(preds) # inverse transform gives the registers\n",
         "print(\"Inverse transform gives the predicted register name(s):\" ,predicted_labels[0])"
       ],
-      "execution_count": 108,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -7162,7 +7181,7 @@
       "source": [
         "print(\"Classification accuracy: \", round(accuracy_score(true_labels, preds)*100,1), \"percent\") # for accuracy score we use here whole binary sequence"
       ],
-      "execution_count": 109,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
