--- a/Text_Classification_task_Hanna_4_MS_3.ipynb
+++ b/Text_Classification_task_Hanna_4_MS_3.ipynb
@@ -7062,23 +7062,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "H4q6hvoMzkRm",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# https://datascience.stackexchange.com/questions/25752/how-does-keras-calculate-accuracy-for-multi-label-classification\n",
-        "# \n",
-        "\n",
-        "score, acc = model.evaluate(test_set, test_labels,\n",
-        "                            batch_size=batch_size)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "VNLiSNOrj3f_",
         "colab_type": "code",
         "outputId": "fe5f3451-6f1c-4580-f41f-153f06562e65",
@@ -7131,6 +7114,23 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "H4q6hvoMzkRm",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# https://datascience.stackexchange.com/questions/25752/how-does-keras-calculate-accuracy-for-multi-label-classification\n",
+        "# TRY THIS OUT!\n",
+        "\n",
+        "score, acc = model.evaluate(test_inp, true_labels,\n",
+        "                            batch_size=BATCH_SIZE)"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
