--- a/Text_Classification_task_Hanna_4_MS_3.ipynb
+++ b/Text_Classification_task_Hanna_4_MS_3.ipynb
@@ -4164,11 +4164,7 @@
       "metadata": {
         "id": "y4WUr_OfBU1C",
         "colab_type": "code",
-        "outputId": "d575b4bb-49d0-428f-c622-0049d88b793e",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        }
+        "colab": {}
       },
       "source": [
         "# Print some examples\n",
@@ -4181,77 +4177,8 @@
         "print('Segment ids:')\n",
         "print(test_inp[1][:2])"
       ],
-      "execution_count": 31,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "(1500, 250)\n",
-            "Token indices:\n",
-            "[[  102 41061  8448  6641 49802   111   609 36238  6575   142 30132  6684\n",
-            "   4535 50051   166 30086 46629   171  8171  2181 35150   489  1620 15336\n",
-            "  20129   364 10915  5034 12221  1236   111   609 15336 22463  8413  1904\n",
-            "  22718   303  4767   422   119   206 24477   182 37947  6355 33845  1661\n",
-            "    142   499   337  3381   422   943  8884  4535 50051   166 30896 32409\n",
-            "  50009   111 10280   224  1611  2799 17213  6706  2264  8022   236  2065\n",
-            "    111 18808  1642 35804 30114  9106   111 15671   145  7772  1091   236\n",
-            "    998 46271   411   597  9258 10006 13111 12949  6360   166 42864 50009\n",
-            "   5971  1827   193   257 14463 26420 34478 35403  2443   380  5971  1694\n",
-            "    339  4960 17345   255 14281  2494  1642  4535 50051   166 30086   111\n",
-            "  29174  1337  5253   145  3518 16883   170 20818   353 14798   111  5971\n",
-            "   1232  8836   988 14589 34478   255  4896  2951  5962   111   609 34478\n",
-            "    255  7656   193  5976 21841  8679   802  1038   145   652   138  3336\n",
-            "   4884   776   303  4211   422 23868   176 23281   144  2177  4401 50069\n",
-            "   2065 10254 50057  2960 42630   919 34478   145  3291   142 31383 15900\n",
-            "    499 21399 34478 47485   303 34478   146   727   864   270 29940 21973\n",
-            "   5187  2648   111  8605   358  8545  4100   126 28066  2055  3505 19048\n",
-            "  20518 15869 34356   734 13368 22660 24249   170   111  3837  1322  5552\n",
-            "  13368  8545  3524  4622 11619  1061   337 11841  1061 22277 15856   111\n",
-            "  16572   936  4622 13953   145  5938   563  1002  1958   166   142 12171\n",
-            "   2489 16620  8952   111 12905  4622 13953   145 29245   103]\n",
-            " [  102   261 16634   236 15293 34209  3414   136  1742  6091   111   111\n",
-            "    111 20675  1024 50016   119 25543  2342   380 29548 50011 15251 16666\n",
-            "  12838   913   380  9181   119 19801 50011  6114   235  1354 31814  2167\n",
-            "    427   559 38060   380 16026 50011   672  1385   590  8275   946 33124\n",
-            "   2045 38636 17708   539   305  3323 25896  1442 22502 50006   142   672\n",
-            "   2644   305 18308 50006   437   164 34276  9368  6054  1345  1527 26619\n",
-            "   8247   105 38619   464   142 19278   333 22258   473 17671   119  5236\n",
-            "    519 25134  1015 50006   142  8703 27427  8885 17856   142 27642   199\n",
-            "    280   563  2010  5822 26129   519 15100   265 46444   725 29769   111\n",
-            "    111   111  2297 15567   478  7657   106 30428   133 24915 50008   111\n",
-            "    111   111  8159  9436 18317 18534   468   913 10981   368   142 34713\n",
-            "  43256  5786   658  2073  8429   119   304   491  4658   250  7942  5323\n",
-            "    119  1224   572  7065  2392   164   380 14973 50010   119  8784 16666\n",
-            "  37516 20038  4361 37344   380  3586  6642   913  1671   672  1385   590\n",
-            "   1676   774  3158 25353   403   119   606  2394  1107 15133  4655   845\n",
-            "   1019  3430  3811   184  1251  1832  1429 19864   785   119  1224 18727\n",
-            "  15601 12823   127  6670   142  9415 10101   572  7455 10997   113  6567\n",
-            "   1736  1529   380  7407  7295  1346  1697  1236  5887 50007   341   567\n",
-            "   3588 50012   639   111   111   111   142  4638 12318 50007  1706 34775\n",
-            "  41574   207   427   119 29194  4829 29586  2073  8429   572  4019   142\n",
-            "  19017   280   572 17893  1437 36443   142  2857  3870   103]]\n",
-            "Decoded:\n",
-            "['Tehkää', 'nolla', '##lei', '##maus', '.', 'Jos', 'rekisteröinti', 'onnistui', 'ja', 'käyttämä', '##nne', 'Q', '##R', '-', 'koodi', '##luki', '##ja', '##ohjelma', 'toimii', 'toivot', '##ulla', 'tavalla', 'saatte', 'kuitta', '##uksen', 'onnistun', '##eesta', 'leima', '##uksesta', '.', 'Jos', 'saatte', 'valituksen', 'puuttu', '##vasta', 'joukkueesta', 'niin', 'varmista', '##kaa', ',', 'että', 'teit', '##te', 'edellämain', '##itun', 'rekisteröin', '##nin', 'ja', '/', 'tai', 'kokeil', '##kaa', 'eri', 'ohjelmaa', 'Q', '##R', '-', 'koodin', 'tulkintaa', '##n', '.', 'Siir', '##ty', '##kää', 'lähtö', '##alueelle', 'viimeistään', 'klo', '09', ':', '50', '.', 'Alue', 'löytyy', 'hissi', '##linjan', 'edestä', '.', 'Lähtö', 'on', 'tasan', '10', ':', '00', 'Lähd', '##ön', 'jälkeen', 'julkaistaan', 'tapahtuman', 'sivulla', 'linkki', 'online', '-', 'seurantaa', '##n', 'Ras', '##teja', 'ei', 'ole', 'merkitty', 'maastoon', 'rasti', '##lip', '##uilla', '!', 'Ras', '##tit', 'ovat', 'pieniä', 'paperi', '##la', '##ppuja', 'joista', 'löytyy', 'Q', '##R', '-', 'koodi', '.', 'Joillakin', 'ras', '##teilla', 'on', 'puna', '##valko', '##ista', 'merkintä', '##na', '##uhaa', '.', 'Ras', '##tis', '##elit', '##teet', 'auttavat', 'rasti', '##la', '##pun', 'löytä', '##misessä', '.', 'Jos', 'rasti', '##la', '##ppua', 'ei', 'löydy', 'oikeasta', 'paikasta', 'eli', 'joku', 'on', 'lap', '##un', 'käynyt', 'poista', '##massa', 'niin', 'ilmoitta', '##kaa', 'tekstiviesti', '##llä', 'nro', '##on', '+', '35', '##8', '50', '58', '##3', '60', '##44', 'mikä', 'rasti', 'on', 'kyseessä', 'ja', 'ottakaa', 'valokuva', '/', 'valokuvia', 'rasti', '##alueesta', 'niin', 'rasti', '##lla', 'käy', '##misen', '##ne', 'tarkistetaan', 'maalissa', 'valoku', '##vista', '.', 'Myöh', '##äs', '##tyminen', 'sarjan', '##sa', 'takara', '##jasta', 'aiheuttaa', 'miinus', '##pisteen', 'jokaisesta', 'alkava', '##sta', 'myöhäs', '##tymis', '##minuut', '##ista', '.', 'Yli', '15', 'minuutin', 'myöhäs', '##tyminen', 'johtaa', 'joukkueen', 'hylkää', '##miseen', 'tai', 'siirtä', '##miseen', 'pitempään', 'sarjaan', '.', 'Kilpailun', 'aikana', 'joukkueen', 'jäsenten', 'on', 'oltava', 'koko', 'ajan', 'näkö', '-', 'ja', 'kuulo', '##etä', '##isyydellä', 'toisistaan', '.', 'Kaikkien', 'joukkueen', 'jäsenten', 'on', 'käytävä']\n",
-            "['1', 'kommenttia', ':', 'Syys', '##lomalle', '##läh', '##ti', '##jät', 'kirjoitti', '.', '.', '.', 'Ly', '##sti', '##ä', ',', 'lys', '##tiä', '!', 'Onpa', '##s', 'kivoja', 'lumi', '##kuvia', 'taas', '!', 'Juu', ',', 'enpä', '##s', 'taida', '##kaan', 'ottaa', 'filla', '##ria', 'mukaan', 'vaan', 'sukset', '!', 'Joko', '##s', 'ensi', '##lu', '##men', '##lad', '##ulle', 'pääsis', 'kohta', '##puolin', 'hiihtä', '##mään', '?', 'Siis', 'tulevana', 'viikon', '##vaihteen', '##a', 'ja', 'ensi', 'viikolla', '?', 'Kip', '##a', '##isin', 'jo', 'ulla', '##kolla', 'kerää', '##mässä', 'por', '##ukalle', 'talvi', '##ta', '##mine', '##ita', 'ja', 'laukku', '##jen', 'pakkaa', '##minen', 'aloitettu', ',', 'huomenna', 'vielä', 'vanhempain', '##ilta', '##a', 'ja', 'öljyn', '##vaihtoa', 'meno', '##peliin', 'ja', 'tänäänkin', 'se', 'oli', 'koko', 'päivän', 'korjaa', '##molla', 'vielä', 'jous', '##ien', 'laaker', '##eiden', 'vaihdossa', '.', '.', '.', 'piti', 'säätää', 'vain', 'pyöri', '##en', 'aura', '##us', '##kulma', '##t', '.', '.', '.', 'Tie', '##hallinnon', 'keli', '##kamer', '##oita', 'taas', 'sela', '##sin', 'ja', 'Salla', '##tuntu', '##rilla', 'hyvin', 'pyr', '##yttänyt', ',', 'mutta', 'nyt', 'vien', '##ee', 'Pyhä', 'voiton', ',', 'siellä', 'ihan', 'kin', '##oksia', 'jo', '!', 'Je', '##e', ',', 'päästään', 'lumi', '##ukkojen', 'tekoon', 'omalla', 'tontilla', '!', 'Aika', 'kivaa', 'taas', 'päästä', 'ensi', '##lu', '##men', 'kokem', '##iseen', 'syys', '##lomalla', '##mme', ',', 'vaikka', 'ollaan', 'me', 'Saari', '##sel', '##ällä', 'siv', '##ak', '##oitu', '##kin', 'tällä', 'sama', '##isella', 'lomalla', 'ennen', ',', 'siellä', 'laitettiin', 'pikaisesti', 'lad', '##ut', 'kuntoon', 'ja', 'porukkaa', 'riitti', 'ihan', 'kilpa', '##hiih', '##tä', '##jiin', 'asti', 'heti', '!', 'Tieto', 'lat', '##ujen', 'ava', '##uksesta', 'kiir', '##i', 'kuin', 'kul', '##ova', '##l', '##kea', '.', '.', '.', 'ja', 'saatiin', 'sillo', '##i', 'tosi', 'upeat', 'jouluku', '##vat', 'mukaan', ',', 'Kaunis', '##pään', 'huipulla', 'pyr', '##yttänyt', 'ihan', 'kunnolla', 'ja', 'mökki', 'oli', 'ihan', 'lumen', '##pe', '##itossa', 'ja', 'lapset', 'ton']\n",
-            "Segment ids:\n",
-            "[[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-            "  0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-            "  0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-            "  0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-            "  0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-            "  0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-            "  0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-            " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-            "  0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-            "  0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-            "  0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-            "  0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-            "  0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-            "  0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -4808,7 +4735,7 @@
         "\n",
         "For milestone 3 we will train two multi-label classifiers, one using non-deep contextual representations, the other using Bert. In this setting, each label is assigned independently. Do hyperparameter optimization on these classifiers.\n",
         "\n",
-        "We selected Support Vector Machine (SVM) to be the non-deep classifier for this milestone.  "
+        "We selected Support Vector Machine (SVM) to be the non-deep classifier for this milestone. According to [scikit documentation](https://https://scikit-learn.org/stable/tutorial/text_analytics/working_with_text_data.html) \"SVM -- is widely regarded as one of the best text classification algorithms (although it’s also a bit slower than naïve Bayes). "
       ]
     },
     {
@@ -5470,12 +5397,10 @@
       "source": [
         "## Linear support vector machine (SVM)\n",
         "\n",
-        "SVM which is widely regarded as one of the best text classification algorithms (although it’s also a bit slower than naïve Bayes). https://scikit-learn.org/stable/tutorial/text_analytics/working_with_text_data.html\n",
+        "To do multilabel classification we wrap the SVM with [MultiOutputClassifier](https://scikit-learn.org/stable/modules/generated/sklearn.multioutput.MultiOutputClassifier.html#sklearn.multioutput.MultiOutputClassifier).\n",
         "\n",
         "\n",
-        "Scikit documentation https://scikit-learn.org/stable/modules/generated/sklearn.multioutput.MultiOutputClassifier.html#sklearn.multioutput.MultiOutputClassifier\n",
-        "\n",
-        "For this milestone we followed tutorial: https://www.datatechnotes.com/2020/03/multi-output-classification-with-multioutputclassifier.html"
+        "For this milestone we followed [scikit tutorial](https://https://scikit-learn.org/stable/tutorial/text_analytics/working_with_text_data.html) and this [tutorial](https://www.datatechnotes.com/2020/03/multi-output-classification-with-multioutputclassifier.html)."
       ]
     },
     {
