--- a/Text_Classification_task_Hanna_almost_FINAL.ipynb
+++ b/Text_Classification_task_Hanna_almost_FINAL.ipynb
@@ -5424,7 +5424,7 @@
       "metadata": {
         "id": "UawS5wlqCTzN",
         "colab_type": "code",
-        "outputId": "cc9e1560-5513-49e8-c24e-51cbda9ab361",
+        "outputId": "41379826-c432-4f47-bdeb-fcfa9549c04d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 73
@@ -5440,10 +5440,10 @@
         "\n",
         "labels = Y_.columns.values.tolist() # labels/registers\n",
         "\n",
-        "estimator = SGDClassifier(loss='hinge', random_state=42, alpha=0.0001, max_iter=40, early_stopping=True)\n",
+        "estimator = SGDClassifier(random_state=42, alpha=0.0001, max_iter=40, early_stopping=True)\n",
         "\n",
         "SGDC_pipeline = Pipeline([\n",
-        "                ('clf', OneVsRestClassifier(estimator)),\n",
+        "                ('clf', OneVsRestClassifier(estimator))\n",
         "            ])\n",
         "\n",
         "SGDC_cnfs = []\n",
@@ -5459,8 +5459,15 @@
         "\n",
         "print(\"Confusion matrices saved\")"
       ],
-      "execution_count": 108,
+      "execution_count": 134,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Confusion matrices saved\n"
+          ],
+          "name": "stdout"
+        },
         {
           "output_type": "stream",
           "text": [
@@ -5468,38 +5475,18 @@
             "  str(classes[c]))\n"
           ],
           "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "Confusion matrixes saved\n"
-          ],
-          "name": "stdout"
         }
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "LPURaKKaw-zw",
-        "colab_type": "code",
-        "colab": {}
+        "id": "-UVQbkXNUMME",
+        "colab_type": "text"
       },
       "source": [
-        "# https://www.datatechnotes.com/2020/03/multi-output-classification-with-multioutputclassifier.html\n",
-        "# from sklearn.metrics import multilabel_confusion_matrix\n",
-        "# from sklearn.multioutput import MultiOutputClassifier\n",
-        "\n",
-        "# SGDC = SGDClassifier(loss='hinge', random_state=42, alpha=0.0001, max_iter=40, early_stopping=True)\n",
-        "# SGDC_model = MultiOutputClassifier(estimator=SGDC)\n",
-        "\n",
-        "\n",
-        "# #We can check the parameters of the model by the print command.\n",
-        "\n",
-        "# print(SGDC_model)"
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "We will analyze the results at chapter 3.2."
+      ]
     },
     {
       "cell_type": "markdown",
@@ -5864,7 +5851,7 @@
       "metadata": {
         "id": "iAyXXiqCpeG5",
         "colab_type": "code",
-        "outputId": "36d6595d-d410-41b3-b4ed-199b11875c26",
+        "outputId": "bdfb579c-1334-4b25-e703-8396a1d4035e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -5875,13 +5862,13 @@
         "\n",
         "print(pretrained_model.output)"
       ],
-      "execution_count": 117,
+      "execution_count": 132,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[<tf.Tensor 'Input-Token_3:0' shape=(?, 250) dtype=float32>, <tf.Tensor 'Input-Segment_3:0' shape=(?, 250) dtype=float32>]\n",
-            "Tensor(\"Encoder-12-FeedForward-Norm_3/add_1:0\", shape=(?, 250, 768), dtype=float32)\n"
+            "[<tf.Tensor 'Input-Token_5:0' shape=(?, 250) dtype=float32>, <tf.Tensor 'Input-Segment_5:0' shape=(?, 250) dtype=float32>]\n",
+            "Tensor(\"Encoder-12-FeedForward-Norm_5/add_1:0\", shape=(?, 250, 768), dtype=float32)\n"
           ],
           "name": "stdout"
         }
@@ -5892,7 +5879,7 @@
       "metadata": {
         "id": "zS7bRChHubSD",
         "colab_type": "code",
-        "outputId": "0e333161-e60e-4a5b-8352-7b7d7d3f1a82",
+        "outputId": "fde2a117-b51e-45f3-f454-44ae7d3db35a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
@@ -5908,12 +5895,12 @@
         "\n",
         "print(bert_out)"
       ],
-      "execution_count": 118,
+      "execution_count": 133,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Tensor(\"strided_slice_1:0\", shape=(?, 768), dtype=float32)\n"
+            "Tensor(\"strided_slice_3:0\", shape=(?, 768), dtype=float32)\n"
           ],
           "name": "stdout"
         }
@@ -5938,7 +5925,7 @@
       "metadata": {
         "id": "1P3irmGsE2wU",
         "colab_type": "code",
-        "outputId": "3cdcfd61-a34e-453b-dfc2-be8db9282f98",
+        "outputId": "1c18a409-42cf-4b33-8d59-ae33548e0b00",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
@@ -5956,19 +5943,19 @@
         "# Now size of the last layer matches the number of the layers and activation our multilabel purposes\n",
         "model.output"
       ],
-      "execution_count": 119,
+      "execution_count": 128,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tf.Tensor 'dense_1/Sigmoid:0' shape=(?, 42) dtype=float32>"
+              "<tf.Tensor 'dense_2/Sigmoid:0' shape=(?, 42) dtype=float32>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 119
+          "execution_count": 128
         }
       ]
     },
@@ -6131,9 +6118,9 @@
         "colab_type": "text"
       },
       "source": [
-        "Since training accuracy is only 60% it seems the model can't fully utilize training data. Also BATCH_SIZEs 8 and 16 were tried but bes results were gained with batch size 4. \n",
+        "Since training accuracy is only 60% it seems the model can't fully utilize training data. Also BATCH_SIZEs 8 and 16 were tried but best results were gained with batch size 4. \n",
         "\n",
-        "Accuracy as a metric is problematic in multilabel classification. Data is highly biased: Most of the true occurences fall in a couple of categories and we have many labels with only a few items belonging to them. Thus predicting for an input text NOT to belong to a certain class improves accuracy.\n",
+        "Accuracy as a metrics is problematic in multilabel classification. Data is highly biased: Most of the true occurences fall in a couple of categories and we have many labels with only a few items belonging to them. Thus predicting for an input text NOT to belong to a certain class improves accuracy.\n",
         "\n",
         "Activation function could also be optimized. By creating a custom made activation function we could shift and optimize the classification treshold of 50% (default value of sigmoid activation). On the other hand moving the "
       ]
@@ -6377,7 +6364,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Now we will compare the results of the two multilabel classifiers. We will analyze the predictions in terms of label-specific differences. We will use the confusion matrices generated for the both predictions.\n",
+        "Now we will compare the results of the two multilabel classifiers. We will analyze the predictions in terms of label-specific differences. For this purpose use the confusion matrices generated for the both predictions.\n",
         "\n",
         "We loop over all the labels and plot binary confusion matrices of the both models side by side. Label specific model evaluation metrics will also be printed.\n",
         "\n",
@@ -6385,7 +6372,9 @@
         "\n",
         "By taking a closer look at the matrices and the performance metrics we can see, how highly accuracy and true positive rate correlate from label to label. Predicting 0 (not belonging to a class) has been couraged strategy for both of our classifiers since accuracy haas been the metrics. Since each text truly belongs only to a few classes, probability of not belonging to most of them is high but for the classifiers this implies bad performance.\n",
         "\n",
-        "Our SGDC seems to be eager to falsely predict the labels. False poritive rate is high from label to label."
+        "Our SGDC seems to be eager to falsely predict the labels even in cases where the label does not belong to. In other words, false positive rate is high from label to label. But also recall (proportion of true positive labels found) is higher than for BERT.\n",
+        "\n",
+        "To further improve the multilabel BERT we could use TruePositives as the performance metrics."
       ]
     },
     {
@@ -6402,7 +6391,7 @@
       "source": [
         "# for the plot and analysis code from \n",
         "# https://stackoverflow.com/questions/40887753/display-matrix-values-and-colormap\n",
-        "# \n",
+        "# was utilized\n",
         "\n",
         "idx = 0\n",
         "for label in mlb.classes_:\n",
@@ -6437,7 +6426,6 @@
         "        ax1.text(i, j, str(c), va='center', ha='center')\n",
         "\n",
         "  im1 = ax1.matshow(matrix, cmap=plt.cm.Blues)\n",
-        "  #plt.title(\"Multi label BERT classification for label %la \\n\" % label, fontsize=16\n",
         "\n",
         "  ax1.set_title(\"\\n BERT performance for label \\\"{}\\\" \\n \"+\n",
         "    \"True positive rate {}\\n \"+\n",
@@ -6448,6 +6436,7 @@
         "    \"Recall {}\\n \"+\n",
         "    \"False discovery rate {}\\n \"+\n",
         "    \"Accuracy {}\\n \". format(label, TPR, FPR, TNR, FNR, PRE, REC, FDR, ACC), fontsize=16)\n",
+        "  \n",
         "  # Second matrix (SGDC)\n",
         "  matrix = SGDC_cnfs[idx]\n",
         "\n",
@@ -6461,7 +6450,7 @@
         "  TNR = round(TN/(TN+FP) * 100, 1) # Specificity or true negative rate\n",
         "  FNR = round(FN/(TP+FN) * 100, 1) # False negative rate\n",
         "  PRE = round(TP/(TP+FP) * 100, 1) # Precision or positive predictive value\n",
-        "  REC = round(TP/(TP+FN) * 100, 1) # Recall\n",
+        "  REC = round(TP/(TP+FN) * 100, 1) # Recall: proportion of relevant documents found\n",
         "  ACC = round((TP+TN)/(TP+FP+FN+TN) * 100, 1) # Overall accuracy\n",
         "  NPV = round(TN/(TN+FN) * 100, 1) # Negative predictive value\n",
         "  FDR = round(FP/(TP+FP) * 100, 1) # False discovery rate\n",
@@ -6484,11 +6473,8 @@
         "      ax2.text(i, j, str(c), va='center', ha='center')\n",
         "\n",
         "  for axis in axes:\n",
-        "    #val = [\"true\", \"false\"]\n",
         "    axis.set_ylabel(\"True\", fontsize = 16)\n",
         "    axis.set_xlabel(\"\\nPredicted\", fontsize = 16)\n",
-        "    #ax.set_xticklabels(farmers)\n",
-        "    #axis.set_yticklabels(val)\n",
         "\n",
         "  idx = idx +1"
       ],
@@ -7063,24 +7049,6 @@
             "needs_background": "light"
           }
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "4rcigcDRKKCe",
-        "colab_type": "text"
-      },
-      "source": [
-        "as mentioned here, the accuracy is ambiguous in the multiple-label case.\n",
-        "\n",
-        "The HL thus presents one clear single-performance-value for multiple-label case in contrast to the precision/recall/f1 that can be evaluated only for independent binary classifiers for each label.\n",
-        "\n",
-        "What are the measure for accuracy of multilabel data? https://stats.stackexchange.com/questions/12702/what-are-the-measure-for-accuracy-of-multilabel-data\n",
-        "\n",
-        "\"When considering the multi label use case, you should decide how to extend accuracy to this case. The method choose in hamming loss was to give each label equal weight. One could use other methods (e.g., taking the maximum).\n",
-        "\n",
-        "Since hamming loss is designed for multi class while Precision, Recall, F1-Measure are designed for the binary class, it is better to compare the last one to Accuracy. In general, there is no magical metric that is the best for every problem. In every problem you have different needs, and you should optimize for them.\" https://stats.stackexchange.com/questions/336820/what-is-a-hamming-loss-will-we-consider-it-for-an-imbalanced-binary-classifier\n"
       ]
     }
   ]
